force-app/main/default/objects/nd_Announcements__c/nd_Announcements__c.object-meta.xml
<CustomObject>
    <description>Used for UR News</description>
    <label>Announcement</label>
    <nameField>
        <displayFormat>AN-{0000000000}</displayFormat>
        <label>Announcements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>