force-app/main/default/objects/nd_Announcements__c/fields/nd_Message__c.field-meta.xml
<CustomField>
    <fullName>nd_Message__c</fullName>
    <label>Message</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>